syntax = "proto3";
import "nova/src/proto/system_state.proto";

message EngineState { // Next = 3
  map<string, SystemState> systems = 1;
  repeated string systemsKeys = 2;
}
