syntax = "proto3";
import "nova/src/proto/outfit_state.proto";
import "nova/src/proto/armament_state.proto";
import "nova/src/proto/map_keys.proto";

message EquipmentState {
  map<string, OutfitState> outfits = 1;
  MapKeys outfitsKeys = 2;

  ArmamentState armament = 3;  
}